--- a/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
+++ b/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Platform>AnyCPU</Platform>
+		<Platform>x64</Platform>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -13,7 +13,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\PhotobookAdapter\PhotobookAdapter.vcxproj" />
+	  <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.7" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\PhotobookRuntimeComponent\PhotobookRuntimeComponent.vcxproj" />
 	</ItemGroup>
 
 
