--- a/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
+++ b/windows/PhotobookNetAdapter/PhotobookNetAdapter.csproj
@@ -12,6 +12,11 @@
 		<CsWinRTGeneratedFilesDir>$(OutDir)</CsWinRTGeneratedFilesDir>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<!-- Workaround for MSB3271 error on processor architecture mismatch -->
+		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.7" />
 	</ItemGroup>
